src/test/deca/context/valid/created/objet/equals_null.deca
// Description :
//      test de verification classe object meth equals
// Resultats :
//      ok

{
    
    Object o;
    int x;
    o.equals(null);
}