src/test/deca/context/invalid/created/objet/equals.deca
// Description :
//      test de verification classe object meth equals
// Resultats :
//      Ligne 10 : signature equals incorrecte

{
    
    Object o;
    int x;
    o.equals(x);
}